2010-02-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tclUnixPort.h    Remove unnecessary EXTERN's, which already
	                        are in the global stub table.
	* unix/configure.in     Use @EXEEXT@ in stead of @EXT_SUFFIX@
	* unix/tcl.m4
	* unix/Makefile.in      Use -DBUILD_tcl for CYGWIN
	* unix/configure        (regenerated)
	* unix/dltest/pkg*.c    Use EXTERN to control CYGWIN exported symbols
	* generic/tclCmdMZ.c    Remove some unnecessary type casts.
	* generic/tclCompCmds.c
	* generic/tclTest.c
	* generic/tclUtil.c

2010-02-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/regexp.test: Add test cases back ported from
        Jacl regexp work.

2010-02-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclDate.c     Some more const tables.
	* generic/tclGetDate.y
	* generic/regc_lex.c
	* generic/regerror.c
	* generic/tclStubLib.c
	* generic/tclBasic.c:   Fix [Bug 2954959] expr abs(0.0) is -0.0
	* tests/expr.test

2010-02-20  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCompCmds.c (TclCompileStringLenCmd): Make [string length]
	of a constant string be handled better (i.e., handle backslashes too).

2010-02-19  Stuart Cassoff  <stwo@users.sourceforge.net>

	* tcl.m4: Correct compiler/linker flags for threaded builds on
	OpenBSD.
	* configure: (regenerated).

2010-02-19  Donal K. Fellows  <dkf@users.sf.net>

	* unix/installManPage: [Bug 2954638]: Correct behaviour of manual page
	installer. Also added armouring to check that assumptions about the
	initial state are actually valid (e.g., look for existing input file).

2010-02-17  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclHash.c (HashStringKey):	Restore these hash functions
	* generic/tclLiteral.c (HashString):	to use the classic algorithm.
	* generic/tclObj.c (TclHashObjKey):	Community felt normal case
	speed to be more important than resistance to malicious cases. For
	now, hashes that need to deal with the malicious case can use a custom